tests/typecheck/should_fail/tcfail011.hs
module ShouldFail where

z = \y -> x x where x = y
