tests/typecheck/should_fail/tcfail011.stderr

tcfail011.hs:3:25: error: [GHC-88464] Variable not in scope: y
